--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="play">PLAY</string>
     <string name="quiz">QUIZ</string>
+    <string name="result_label">Your result is</string>
+    <string name="gratulation">gratulation</string>
+    <string name="another_category">Another category</string>
+    <string name="item">Item</string>
 </resources>
